--- a/react-facts/src/index.css
+++ b/react-facts/src/index.css
@@ -8,3 +8,23 @@ body {
 h1 {
   margin-top: 30px;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.reactLogo {
+  width: 55px;
+}
+
+.nav-bar {
+  list-style: none;
+  display: flex;
+}
+
+.nav-bar > li {
+  margin-left: 10px;
+  font-size: 20px;
+}
