--- a/react-facts/src/index.css
+++ b/react-facts/src/index.css
@@ -1,30 +1,56 @@
 body {
-  padding: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #27292c;
+  margin: 0;
+  font-family: Inter, sans-serif;
+  background-color: #282d35;
   color: white;
 }
 
-h1 {
-  margin-top: 30px;
+header {
+  height: 90;
+  background-color: #21222a;
+  padding: 30px 25px;
 }
 
-.header {
+nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  height: 100;
 }
 
-.reactLogo {
-  width: 55px;
+nav > img {
+  width: 50px;
+  margin-right: 7px;
 }
 
-.nav-bar {
-  list-style: none;
-  display: flex;
+nav > span {
+  color: #61dafb;
+  font-size: 1.4rem;
+  font-weight: 700;
 }
 
-.nav-bar > li {
-  margin-left: 10px;
-  font-size: 20px;
+main {
+  padding: 60px 30px;
+  background-image: url(./assets/react-logo-half.png);
+  background-repeat: no-repeat;
+  background-position: right 70%;
+}
+
+main > h1 {
+  margin: 0;
+  font-size: 2.4rem;
+}
+
+.facts-list {
+  margin-top: 46px;
+  max-width: 400px;
+}
+
+.facts-list > li {
+  padding-block: 10px;
+  line-height: 19px;
+}
+
+.facts-list > li::marker {
+  color: #61dafb;
+  font-size: 1.5rem;
 }
